VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc10Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [16MB/455.1MB][  3%][=>                                                ][5.333MB/s]  [40MB/455.1MB][  8%][====>                                             ][10MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][14.4MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][21.33MB/s]  [184MB/455.1MB][ 40%][====================>                             ][26.29MB/s]  [224MB/455.1MB][ 49%][========================>                         ][28MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][27.56MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][28MB/s]  [320MB/455.1MB][ 70%][===================================>              ][29.09MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][30MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][29.54MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][28.57MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][28.27MB/s]  [440MB/455.1MB][ 96%][================================================> ][27.5MB/s]  [455.1MB/455.1MB][100%][==================================================][28.44MB/s]  [455.1MB/455.1MB][100%][==================================================][28.44MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_59166/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_59166/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
